TODO
* format string
  - add support for %b
  - add support for %10, ...

* wevt
  - xml tag make internal version

* updated msvscpp files
* get %SystemRoot% from:
  SOFTWARE\Microsoft\Windows NT\CurrentVersion\

* XML output change
  - Keywords add 0x no leading 0's

strings:
- support non-contiguous data elements ?

libfwevt optimization:
- reference value while parsing?
- count number of data elements (strings) while parsing
- reference binary (data) while parsing

* API
  - add functions for user security identifier function: system/security#userid
  - get op code (0 => Info)
  - task category (none if not set)
  - keywords

* export_handle_get_message_file_path
  return 0 if no corresponding file has been found
* recovery:
  - pass what type of chunk is being read
  - pass flag to binary xml parsing to ignore parsing errors ?
    or make this the default behavior
  - move read xml out of init record function ?
* fix message filename retrieval, registry bering read wrong ?
* implement libevtx_xml_tag_get_attribute_by_utf8_path (and utf16 equivalent) ?
* implement libevtx_xml_tag_get_element_by_utf8_path (and utf16 equivalent) ?
* store name hash in value identifier
* deal with corruption scenario
* deal with trailing empty data ?
* remove libevtx_libfguid.h once libfvalue wraps the format flags
* evtxeport:
  - rewrite using evtexport
  - export format: xml
  - non-xml export format use evtexport like approach (add functions to get
    specific event data)
* add recovery scan
* add debug function for binary XML token types
* codepage support
* flag internally if the file is corrupted (CRC mismatch)

Recovery:
* scan for records in chunk free space

20121017
* code clean up
* worked on formatted message strings
* updated libwrc

20121016
* changed default language
* worked on pyevtx
* worked on formatted message strings

20121013
* worked on evtxexport

20121012
* worked on evtxexport

20120924
* applied updates
* libcdata update

20120919
* applied updates
